L: Router broken, morale shot, I'll eat the L ont his one...

--- a/src/app/clients/clients-item/clients-item.component.html
+++ b/src/app/clients/clients-item/clients-item.component.html
@@ -1,1 +1,8 @@
-<p>clients-item works!</p>
+<a [routerLink]="[client.id]" routerLinkActive="active" class="list-group-item clearfix">
+  <div class="pull-left">
+    <h4 class="list-group item-heading">{{ client.firstName + client.lastName }}</h4>
+  </div>
+<!--  <span class="pull-right">-->
+<!--    <div>{{ client?.contract?.title }}</div>-->
+<!--  </span>-->
+</a>
