--- a/src/app/clients/clients.component.html
+++ b/src/app/clients/clients.component.html
@@ -1,1 +1,8 @@
-<p>clients works!</p>
+<div class="container justify">
+  <div class="col-md-5">
+    <app-clients-list></app-clients-list>
+  </div>
+  <div class="col-md-4">
+    <router-outlet></router-outlet>
+  </div>
+</div>
