--- a/src/app/clients/clients-edit/clients-edit.component.html
+++ b/src/app/clients/clients-edit/clients-edit.component.html
@@ -1,1 +1,51 @@
-<p>clients-edit works!</p>
+<div class="panel panel-default">
+  <div class="panel-body">
+    <form id="contact-edit" #f="ngForm" (ngSubmit)="onSubmit(f)">
+      <div class="row">
+        <div class="col-sm-12 form-group">
+          <label for="firstName">First Name:</label>
+          <input
+            type="text"
+            id="firstName"
+            name="firstName"
+            [ngModel]="client?.firstName"
+            class="form-control required"
+            size="120"
+            max="120"
+            required>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-sm-12 form-group">
+          <label for="lastName">Last Name:</label>
+          <input
+            type="text"
+            id="lastName"
+            name="lastName"
+            [ngModel]="client?.lastName"
+            class="form-control required"
+            size="120"
+            max="120"
+            required>
+        </div>
+      </div>
+
+<!--      <div class="row">-->
+<!--        <div class="col-sm-12 form-group">-->
+<!--          <label for="contract">Contract:</label>-->
+<!--          <select id="contract" name="contract" [(ngModel)]="selectedContract">-->
+<!--            <option *ngFor="let contract of contracts" [ngValue]="contract">{{ contract?.title }}</option>-->
+<!--          </select>-->
+<!--        </div>-->
+<!--      </div>-->
+
+      <div class="row">
+        <div class="col-xs-12 btn-toolbar">
+          <button class="btn btn-success" type="submit" [disabled]="!f.valid">Save</button>
+          <button class="btn btn-primary" type="button" (click)="onCancel()">Cancel</button>
+        </div>
+      </div>
+    </form>
+  </div>
+</div>
