--- a/src/app/clients/clients-list/clients-list.component.html
+++ b/src/app/clients/clients-list/clients-list.component.html
@@ -1,1 +1,32 @@
-<p>clients-list works!</p>
+<div class="panel panel-default">
+  <div class="row">
+    <div class="col-xs-12">
+      <div class="panel panel-default">
+        <div class="panel-heading">
+          <div class="row">
+            <span class="title pad-left-right">Clients</span>
+          </div>
+          <div class="row">
+            <div class="input-group pull-left pad-left-right col-xs-7">
+              <input type="text" class="form-control" placeholder="Enter a search value" #searchBox (keyup)="search(searchBox.value)"/>
+              <div class="glyphicon glyphicon-search input-group-addon" (click)="search(searchBox.value)"></div>
+            </div>
+            <div class="pull-right pad-left-right">
+              <a class="btn btn-success" [routerLink]="['new']">New Client</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="panel-body">
+    <div class="row">
+      <div class="col-xs-12">
+        <app-clients-item
+          *ngFor="let clientItem of clients"
+          [client]="clientItem">
+        </app-clients-item>
+      </div>
+    </div>
+  </div>
+</div>
